[tool.poetry]
name = "mrs_spellings"
version = "0.2.0"
description = "a micro utility for generating plausible misspellings"
authors = ["CircArgs <quebecname@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.4"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.4"
pylint = "^2.5.2"
dephell = "^0.8.3"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"